<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_form"
        android:orientation="vertical">

        <com.androhub.networkmodule.uc.CustomTextView
            android:id="@+id/tvGallary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gallery"
            android:textColor="@color/color_black"
            android:textSize="15dp"
            android:padding="10dp"
            app:custom_font="semiBold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <com.androhub.networkmodule.uc.CustomTextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/color_black"
            android:textSize="15dp"
            app:custom_font="semiBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <com.androhub.networkmodule.uc.CustomTextView
            android:id="@+id/tvDocument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/document"
            android:textColor="@color/color_black"
            android:textSize="15dp"
            android:padding="10dp"
            android:gravity="center"
            app:custom_font="semiBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>