<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/home_bg_color_gray"

    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <com.androhub.networkmodule.uc.CustomTextView
                android:id="@+id/tvTitle"

                style="@style/TextView_Medium"

                android:gravity="start"
                android:textDirection="firstStrongLtr"
                android:textColor="@color/font_gray_3"
                android:textSize="16sp"
                tools:text="@string/services" />


            <com.androhub.networkmodule.uc.CustomTextView
                android:id="@+id/tvSubTitle"
                style="@style/TextView_Medium"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_time_gray"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:textColor="@color/textview_color_extra_light"
                android:textSize="12sp"
                android:visibility="gone"
                app:custom_font="regular"
                tools:text="1.6 KM" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.androhub.networkmodule.uc.CustomTextView
            android:id="@+id/btnMore"
            style="@style/TextView_Medium"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_round_green_round"
            android:drawableEnd="@drawable/ic_chevron_right_white_two"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:text="@string/book"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:custom_font="semiBold" />


        <com.androhub.networkmodule.uc.CustomTextView
            android:id="@+id/btnClosed"
            style="@style/TextView_Medium"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="end|center"
            android:text="@string/closed"
            android:textColor="@color/font_red"
            android:textSize="14sp"
            android:visibility="gone"
            app:custom_font="regular"
            android:layout_marginEnd="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/view_color" />

</LinearLayout>
